--- a/package.json
+++ b/package.json
@@ -89,6 +89,6 @@
   },
   "packageManager": "pnpm@8.15.9",
   "publishConfig": {
-    "registry": "https://registry.npmjs.org"
+    "registry": "https://npm.pkg.github.com"
   }
 }
