--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-plugin-image-optimizer",
+  "name": "@shibomb/vite-plugin-image-optimizer",
   "version": "1.1.9",
   "author": "shibomb",
   "files": [
